--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "firebase": "^3.2.1",
-    "graphdracula": "0.0.3-alpha5-19-g6301dfc",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-graph-vis": "0.0.3",
-    "react-node-graph": "^1.0.4",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
